[package]
name = "rsa-rs"
version = "0.1.0"
authors = ["Sun Ziping <sunziping2016@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
num_cpus = "1.13.0"
pem = "0.8.1"
nom = "6.0.0"
whoami = "0.9.0"
base64 = "0.13.0"