[package]
name = "rsa-rs"
version = "0.1.0"
authors = ["Sun Ziping <sunziping2016@gmail.com>"]
edition = "2018"
description = "Generate RSA key pairs, encrypt and decrypt contents with RSA"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"
nom = "6.0.0"
num_cpus = "1.13.0"
pem = "0.8.1"
rand = "0.7"
whoami = "0.9.0"
